Resolves: fdo#85666 when matching existing list indent use matching level

Change-Id: I20bf0fa3a9b1562d46eba6321edca047cf02b128
(cherry picked from commit 30033deace805ce507c8532c51c42b9ede98db06)